
This version also includes a slightly expanded set of coding standards by which
shUnit2 is coded. It should help anyone reading the code to better understand
it.

To use zsh with shUnit2, the following requirement must be met:
- The ``shwordsplit`` option must be set.

Please read the Shell Errata section of the documentation for guidance on how
to meet these requirements.

See the ``CHANGES-2.1.txt`` file for a full list of changes.


Tested Platforms
----------------

Cygwin

? bash 3.2.39(19)
? pdksh 5.2.14
? zsh 4.3.4

Linux (Ubuntu Dapper 6.06)

? bash 3.1.17(1)
? pdksh 5.2.14
? zsh 4.2.5

Linux (Ubuntu Hardy 8.04)

? bash 3.2.39(1)
? dash 0.5.4
? ksh 1993-12-28
? pdksh 5.2.14
? zsh 4.3.4

Mac OS X 10.5.4 (Darwin 9.4.0)

? bash 3.2.17(1)
? ksh 1993-12-28
? zsh 4.3.4

Solaris 9 U6 x86

? /bin/sh
? bash 2.05.0(1)
? ksh M-11/16/88i
? zsh 3.0.8

Solaris 11 x86 (Nevada 77)

? /bin/sh
? bash 3.2.25(1)
? ksh M-11/16/88i
? zsh 4.3.4


New Features
------------

Support added for outputing assert source line number as part of assert
messages.

Issue #2: Added assertNotEquals() assert.


Changes and Enhancements
------------------------

Rewrote the test summary. It is now greatly simplified and much more script
friendly.

Issue #3: Removed the check for unset variables as shUnit2 should not expect
scripts being tested to be clean.

Code updated to meet documented coding standards.

Improved code reusage of _shunit_exit() and _shunit_fatal() functions.

All output except shUnit2 error messages now goes to STDOUT.


Bug Fixes
---------

Issue #1: ending report is now always generated.


Deprecated Features
-------------------

None.


Known Bugs and Issues
---------------------

zsh requires the ``shwordsplit`` option to be set.

Line numbers in assert messages do not work properly with Bash 2.x.

Unable to catch shell failures of Bourne shell and BASH 2.x properly
(shunit_test_output.sh).


.. vim:ft=rst:spell:tw=80